feat(cat): add load photo when create cat; fix(cat_photo): fix move validate photos logic to service
