# backend/api/docs/swagger.json
@@ -55,7 +55,7 @@
                 ],
                 "description": "Создает нового кота",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -66,13 +66,36 @@
                 "summary": "Создание кота",
                 "parameters": [
                     {
-                        "description": "Данные кота",
-                        "name": "cat",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.CatCreateRequest"
-                        }
+                        "type": "string",
+                        "description": "Кличка кота",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Возраст кота",
+                        "name": "age",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Описание кота",
+                        "name": "description",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "file"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Файлы изображений",
+                        "name": "files",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1034,25 +1057,14 @@
                 }
             }
         },
-        "entities.CatCreateRequest": {
-            "type": "object",
-            "properties": {
-                "age": {
-                    "type": "integer"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "entities.CatCreateResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "photo": {
+                    "$ref": "#/definitions/entities.CatPhotoUploadResponse"
                 }
             }
         },
